user_profile_modal: Fix label alignment for non-English languages.
This fixes the issue in which the lengthy labels would either overflow
or affect the alignment of the profile fields.

--- a/static/styles/popovers.css
+++ b/static/styles/popovers.css
@@ -238,8 +238,13 @@ ul {
     .name {
         color: hsl(0, 0%, 20%);
         display: inline-block;
-        min-width: 120px;
+        width: 120px;
         font-weight: 600;
+        margin-right: 10px;
+    }
+
+    .value {
+        vertical-align: top;
     }
 
     #exit-sign {
